tests/NormalTests/paczka1/fuzzy1/35391436.err
Error in line 5: S834 S834 47,8
Error in line 12: tH3Npu S89 41,19
Error in line 10: BRnI7 A765 1,0
Error in line 7: lbru99s A765 84,6
Error in line 14: BRnI7 S834 88,2
Error in line 11: hrbuZHpFvu0 S89 51,7
Error in line 23: vO0Ajnc7dH8 S834 92,·
Error in line 24: 0q9bnQaLT S834 16,0
Error in line 38: vO0Ajnc7dH8 A765 254,0
